<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="module_d_app_name">module_d</string>
    <string name="module_d_title_name">小工具（x）</string>
    <string name="module_d_name">小工具</string>
    <string name="module_d_title_manage">管理</string>
    <string name="module_d_total">共x个小工具</string>
    <string name="module_d_first_item_text_0">语音</string>
    <string name="module_d_first_item_text_1">物流</string>
    <string name="module_d_first_item_text_2">阅读</string>

    <string name="module_d_activity_book_list_title_text">图书分类</string>

    <string name="module_d_activity_express_title_input_hint">输入快递单号查询</string>
    <string name="module_d_activity_express_messenger_name">快递员 %1$s</string>
    <string name="module_d_activity_express_messenger_tel">快递员电话 %1$s</string>
    <string name="module_d_activity_express_supplier_and_num">%1$s %2$s</string>

    <string name="module_d_fragment_history_record_search">历史搜索</string>

    <string name="module_d_fragment_bing_picture_title">精彩世界</string>
    <string name="module_d_fragment_bing_picture_source_from">数据来源 必应搜索</string>
    <string name="module_d_fragment_bing_picture_error">加载失败，下拉重新加载</string>
</resources>
