<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <View
            android:id="@+id/module_d_fragment_d_title_placeholder"
            android:background="@drawable/module_d_gradient_primary"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/module_d_fragment_d_title_name"
            android:background="@drawable/module_d_gradient_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/module_d_title_name"
            android:textSize="@dimen/design_main_title"
            android:textColor="@color/design_color_text_white"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/design_margin_top"
            android:paddingBottom="@dimen/design_margin_bottom"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/module_d_fragment_d_title_placeholder"/>
    <TextView
            android:id="@+id/module_d_fragment_d_title_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_d_title_manage"
            android:textSize="@dimen/design_sub_title"
            android:textColor="@color/design_color_text_white"
            android:paddingEnd="@dimen/design_margin_right"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/module_d_fragment_d_title_name"
            app:layout_constraintBottom_toBottomOf="@id/module_d_fragment_d_title_name"
            app:layout_constraintRight_toRightOf="@id/module_d_fragment_d_title_name"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <View
                    android:id="@+id/module_d_fragment_d_placeholder"
                    android:background="@drawable/module_d_gradient_primary"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/module_d_fragment_d_name"
                    android:background="@drawable/module_d_gradient_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/module_d_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/design_main_title"
                    android:textColor="@color/design_color_text_white"
                    android:gravity="start"
                    android:paddingTop="@dimen/design_margin_top"
                    android:paddingBottom="@dimen/design_margin_bottom"
                    android:paddingStart="@dimen/design_margin_left"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/module_d_fragment_d_placeholder"/>
            <TextView
                    android:id="@+id/module_d_fragment_d_manage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/module_d_title_manage"
                    android:textSize="@dimen/design_sub_title"
                    android:textColor="@color/design_color_text_white"
                    android:paddingEnd="@dimen/design_margin_right"
                    app:layout_constraintTop_toTopOf="@id/module_d_fragment_d_name"
                    app:layout_constraintBottom_toBottomOf="@id/module_d_fragment_d_name"
                    app:layout_constraintRight_toRightOf="@id/module_d_fragment_d_name"/>
            <TextView
                    android:id="@+id/module_d_fragment_d_total"
                    android:background="@drawable/module_d_gradient_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/module_d_total"
                    android:textSize="@dimen/design_sub_title"
                    android:textColor="@color/design_color_text_white"
                    android:paddingStart="@dimen/design_margin_left"
                    android:paddingBottom="@dimen/design_margin_bottom"
                    android:paddingTop="@dimen/design_margin_top"
                    app:layout_constraintTop_toBottomOf="@id/module_d_fragment_d_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/module_d_fragment_d_first_item_bg_height"
                    android:background="@drawable/module_d_gradient_primary"
                    app:layout_constraintTop_toBottomOf="@id/module_d_fragment_d_total"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/module_d_fragment_d_first_item_bg"
                    android:layout_marginStart="@dimen/design_margin_left"
                    android:layout_marginEnd="@dimen/design_margin_right"
                    android:paddingTop="@dimen/design_margin_top"
                    android:paddingBottom="@dimen/design_margin_bottom"
                    app:layout_constraintTop_toBottomOf="@id/module_d_fragment_d_total"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:translationZ="8dp">
                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/module_d_fragment_d_first_item_icon_0"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/module_d_fragment_d_first_item_icon_size"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_default="percent"
                        app:layout_constraintWidth_percent="0.33"
                        android:src="@drawable/module_d_yuyin"/>
                <TextView
                        android:id="@+id/module_d_fragment_d_first_item_text_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_d_first_item_text_0"
                        android:textColor="@color/design_color_text_black"
                        android:textSize="@dimen/design_sub_title"
                        app:layout_constraintRight_toRightOf="@id/module_d_fragment_d_first_item_icon_0"
                        app:layout_constraintLeft_toLeftOf="@id/module_d_fragment_d_first_item_icon_0"
                        app:layout_constraintTop_toBottomOf="@id/module_d_fragment_d_first_item_icon_0" />
                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/module_d_fragment_d_first_item_icon_1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/module_d_fragment_d_first_item_icon_size"
                        app:layout_constraintLeft_toRightOf="@id/module_d_fragment_d_first_item_icon_0"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_default="percent"
                        app:layout_constraintWidth_percent="0.33"
                        android:src="@drawable/module_d_ic_express" />
                <TextView
                        android:id="@+id/module_d_fragment_d_first_item_text_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_d_first_item_text_1"
                        android:textColor="@color/design_color_text_black"
                        android:textSize="@dimen/design_sub_title"
                        app:layout_constraintRight_toRightOf="@id/module_d_fragment_d_first_item_icon_1"
                        app:layout_constraintLeft_toLeftOf="@id/module_d_fragment_d_first_item_icon_1"
                        app:layout_constraintTop_toBottomOf="@id/module_d_fragment_d_first_item_icon_1" />
                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/module_d_fragment_d_first_item_icon_2"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/module_d_fragment_d_first_item_icon_size"
                        app:layout_constraintLeft_toRightOf="@id/module_d_fragment_d_first_item_icon_1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintWidth_default="percent"
                        app:layout_constraintWidth_percent="0.33"
                        android:src="@drawable/module_d_yuedu"/>
                <TextView
                        android:id="@+id/module_d_fragment_d_first_item_text_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_d_first_item_text_2"
                        android:textColor="@color/design_color_text_black"
                        android:textSize="@dimen/design_sub_title"
                        app:layout_constraintRight_toRightOf="@id/module_d_fragment_d_first_item_icon_2"
                        app:layout_constraintLeft_toLeftOf="@id/module_d_fragment_d_first_item_icon_2"
                        app:layout_constraintTop_toBottomOf="@id/module_d_fragment_d_first_item_icon_2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>