<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.impl.ExpressActivity">
    <View
            android:id="@+id/module_d_activity_express_placeholder_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/design_color_accent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <View
            android:id="@+id/module_d_activity_express_title_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/module_d_activity_express_title_height"
            android:background="@color/design_color_accent"
            app:layout_constraintTop_toBottomOf="@id/module_d_activity_express_placeholder_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
            android:id="@+id/module_d_activity_express_title_left_icon"
            android:layout_width="@dimen/module_d_activity_express_title_icon_size"
            android:layout_height="@dimen/module_d_activity_express_title_icon_size"
            android:layout_marginLeft="@dimen/design_margin_left"
            android:src="@drawable/design_ic_back_white"
            app:layout_constraintTop_toTopOf="@id/module_d_activity_express_title_background"
            app:layout_constraintLeft_toLeftOf="@id/module_d_activity_express_title_background"
            app:layout_constraintBottom_toBottomOf="@id/module_d_activity_express_title_background" />
    <ImageView
            android:id="@+id/module_d_activity_express_title_right_icon"
            android:layout_width="@dimen/module_d_activity_express_title_icon_size"
            android:layout_height="@dimen/module_d_activity_express_title_icon_size"
            android:layout_marginRight="@dimen/design_margin_right"
            android:src="@drawable/design_ic_search"
            app:layout_constraintTop_toTopOf="@id/module_d_activity_express_title_background"
            app:layout_constraintRight_toRightOf="@id/module_d_activity_express_title_background"
            app:layout_constraintBottom_toBottomOf="@id/module_d_activity_express_title_background" />
    <TextView
            android:id="@+id/module_d_activity_express_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_d_first_item_text_1"
            android:textSize="@dimen/design_main_title"
            android:textColor="@color/design_color_white"
            app:layout_constraintLeft_toLeftOf="@id/module_d_activity_express_title_background"
            app:layout_constraintRight_toRightOf="@id/module_d_activity_express_title_background"
            app:layout_constraintTop_toTopOf="@id/module_d_activity_express_title_background"
            app:layout_constraintBottom_toBottomOf="@id/module_d_activity_express_title_background"/>
    <EditText
            android:id="@+id/module_d_activity_express_title_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:textColor="@color/design_color_text_white"
            android:textSize="@dimen/design_main_title"
            android:paddingLeft="@dimen/design_margin_left"
            android:paddingRight="@dimen/design_margin_right"
            android:hint="@string/module_d_activity_express_title_input_hint"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/module_d_activity_express_title_background"
            app:layout_constraintBottom_toBottomOf="@id/module_d_activity_express_title_background"
            app:layout_constraintLeft_toRightOf="@id/module_d_activity_express_title_left_icon"
            app:layout_constraintRight_toLeftOf="@id/module_d_activity_express_title_right_icon"
            tools:text="123456"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/module_d_activity_express_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/module_d_activity_express_information_bg"
            android:layout_marginLeft="@dimen/design_margin_left"
            android:layout_marginRight="@dimen/design_margin_right"
            android:layout_marginTop="@dimen/design_margin_top"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/module_d_activity_express_title_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        <ImageView
                android:id="@+id/module_d_activity_express_supplier_logo_icon"
                android:layout_width="@dimen/module_d_activity_express_supplier_logo_size"
                android:layout_height="@dimen/module_d_activity_express_supplier_logo_size"
                tools:src="@drawable/logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/module_d_activity_express_messenger_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/design_margin_left"
                android:textSize="@dimen/design_text"
                android:textColor="@color/design_color_text_black"
                android:text="@string/module_d_activity_express_messenger_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/module_d_activity_express_supplier_logo_icon"
                app:layout_constraintRight_toLeftOf="@id/module_d_activity_express_split_line_vertical"
                app:layout_constraintBottom_toTopOf="@id/module_d_activity_express_messenger_tel"
                app:layout_constraintVertical_chainStyle="packed" />
        <TextView
                android:id="@+id/module_d_activity_express_messenger_tel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/design_text"
                android:textColor="@color/design_color_text_black"
                android:text="@string/module_d_activity_express_messenger_tel"
                app:layout_constraintTop_toBottomOf="@id/module_d_activity_express_messenger_name"
                app:layout_constraintLeft_toLeftOf="@id/module_d_activity_express_messenger_name"
                app:layout_constraintRight_toRightOf="@id/module_d_activity_express_messenger_name"
                app:layout_constraintBottom_toBottomOf="@id/module_d_activity_express_supplier_logo_icon" />
        <View
                android:id="@+id/module_d_activity_express_split_line_vertical"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="@color/design_color_grey"
                app:layout_constraintRight_toLeftOf="@id/module_d_activity_express_phone_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/module_d_activity_express_supplier_logo_icon"/>
        <View
                android:id="@+id/module_d_activity_express_split_line_horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/design_color_grey"
                android:layout_marginTop="@dimen/design_margin_top"
                app:layout_constraintTop_toBottomOf="@id/module_d_activity_express_supplier_logo_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        <ImageView
                android:id="@+id/module_d_activity_express_phone_icon"
                android:layout_width="@dimen/module_d_activity_express_phone_icon_size"
                android:layout_height="@dimen/module_d_activity_express_phone_icon_size"
                android:src="@drawable/module_d_ic_call_phone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/module_d_activity_express_supplier_logo_icon"/>
        <TextView
                android:id="@+id/module_d_activity_express_supplier_and_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/design_text"
                android:textColor="@color/design_color_text_black"
                android:text="@string/module_d_activity_express_supplier_and_num"
                android:layout_marginTop="@dimen/design_margin_top"
                app:layout_constraintTop_toBottomOf="@id/module_d_activity_express_split_line_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/module_d_activity_express_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/design_margin_left"
            android:layout_marginRight="@dimen/design_margin_right"
            android:layout_marginTop="@dimen/design_margin_top"
            android:layout_marginBottom="@dimen/design_margin_bottom"
            app:layout_constraintTop_toBottomOf="@id/module_d_activity_express_information"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0f"/>
    <FrameLayout
            android:id="@+id/module_d_activity_express_fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/module_d_activity_express_title_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0f"/>
</androidx.constraintlayout.widget.ConstraintLayout>